clean-up, canvas scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
     font-size: 16px;
     font-family: Georgia, serif;
     font: 15px Inconsolata;
-    margin: 20px;
+    margin: 0px;
+    padding-bottom: 20px;
     background-color: #fff;
     color: #000;
     line-height: 1.4;
@@ -64,7 +65,7 @@
   }
   
   header {
-    padding: 5px 0px;
+    padding: 20px 0px;
     text-align: center;
   }
   
